syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.melli.wallet.grpc";
option java_outer_classname = "PurchaseProto";

package wallet;

import "base.proto";

// Purchase Service
service PurchaseService {
  rpc GenerateBuyUuid(BuyGenerateUuidRequestGrpc) returns (BaseResponseGrpc) {}
  rpc GenerateSellUuid(SellGenerateUuidRequestGrpc) returns (BaseResponseGrpc) {}
  rpc Inquiry(InquiryPurchaseRequestGrpc) returns (BaseResponseGrpc) {}
  rpc Buy(BuyWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc BuyDirect(BuyDirectWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc Sell(SellWalletRequestGrpc) returns (BaseResponseGrpc) {}
}

// Request Messages
message BuyGenerateUuidRequestGrpc {
  string national_code = 1;
  string quantity = 2;
  string price = 3;
  string account_number = 4;
  string merchant_id = 5;
  string currency = 6;
}

message SellGenerateUuidRequestGrpc {
  string national_code = 1;
  string quantity = 2;
  string account_number = 3;
  string currency = 4;
}

message BuyWalletRequestGrpc {
  string unique_identifier = 1;
  string quantity = 2;
  string price = 3;
  string wallet_account_number = 4;
  string additional_data = 5;
  string merchant_id = 6;
  string national_code = 7;
  string currency = 8;
  string sign = 9;
  CommissionObjectGrpc commission_object = 10;
}

message BuyDirectWalletRequestGrpc {
  string unique_identifier = 1;
  string quantity = 2;
  string price = 3;
  string wallet_account_number = 4;
  string additional_data = 5;
  string merchant_id = 6;
  string national_code = 7;
  string currency = 8;
  string sign = 9;
  string ref_number = 10;
  CommissionObjectGrpc commission_object = 11;
}

message SellWalletRequestGrpc {
  string unique_identifier = 1;
  string quantity = 2;
  string price = 3;
  string wallet_account_number = 4;
  string additional_data = 5;
  string merchant_id = 6;
  string national_code = 7;
  string currency = 8;
  string sign = 9;
  CommissionObjectGrpc commission_object = 10;
}

message InquiryPurchaseRequestGrpc {
  string unique_identifier = 1;
  string type = 2;
}